--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <a href="https://coding.net/oauth_login.html?return_url=https%3A%2F%2Fcoding.net%2Foauth_authorize.html%3Fclient_id%3D8611acd29258e165f3e15402eefa2cbd%26redirect_uri%3Dhttps%3A%2F%2Fgithub.com%2Flijy91%2Falfred-coding-workflow%26response_type%3Dcode%26scope%3Dproject" class="btn btn-lg btn-default">获取</a>
+  <a href="https://coding.net/oauth_authorize.html?client_id=8611acd29258e165f3e15402eefa2cbd&redirect_uri=http://acw.coding.io&response_type=code&scope=project" class="btn btn-lg btn-default">获取</a>
 
   <!-- Bootstrap core JavaScript
   ================================================== -->
