--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
     }
     $(document).ready(function () {
         var code = $.urlParam('code');
-        $.getJSON("https://coding.net/api/oauth/access_token?client_id=8611acd29258e165f3e15402eefa2cbd&client_secret=47e1dbfec4f115443f8b988aa8ad496ef9888334&grant_type=authorization_code&code=" + code, function(json){
-            alert("JSON Data: " + json.access_token);
+        $.ajax({
+            type: 'GET',
+            dataType : "jsonp",
+            url: "https://coding.net/api/oauth/access_token?client_id=8611acd29258e165f3e15402eefa2cbd&client_secret=47e1dbfec4f115443f8b988aa8ad496ef9888334&grant_type=authorization_code&code=" + code,
+            success: function (data) {
+                alert(data);
+            }
         });
     });
   </script>
